[gd_scene load_steps=4 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://barrel.tscn" type="PackedScene" id=3]

[node name="Level" type="Node2D"]

script = ExtResource( 1 )
nextLevel = "res://level_2.tscn"
duration = 30
waves = 10
minScore = 5
levelName = ""

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

[node name="LevelLabel" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 152.0
margin_right = 196.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "LEVEL 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GoalLabel" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 168.0
margin_right = 196.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "GOAL: 8 FISH"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WinLabel" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_top = 72.0
margin_right = 182.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Barrel" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 360, 68 )


